Add and modify files

--- a/05-Container-Orchestration/Kubernetes-Manifest-Getting-Started.ipynb
+++ b/05-Container-Orchestration/Kubernetes-Manifest-Getting-Started.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5dc7823c-2311-4621-a58f-1e9043a1a124",
    "metadata": {},
    "outputs": [],
@@ -79,6 +79,16 @@
     "### Creating a Deployment\n",
     "\n",
     "Reference: https://kubernetes.io/docs/concepts/workloads/controllers/deployment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23865f52-a984-47f8-9bdd-07c8b373b2b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### nginx-deployment.yaml"
    ]
   },
   {
@@ -130,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " !kubectl get all"
+    "!kubectl get all"
    ]
   },
   {
@@ -151,6 +161,209 @@
    "outputs": [],
    "source": [
     "!kubectl port-forward svc/nginx-deployment 8000:80 --address 0.0.0.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "282c3261-4613-4753-9eb2-e519fd0e83db",
+   "metadata": {},
+   "source": [
+    "### Edit a deployment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e94a9570-f601-493c-ad23-e8641c0df74c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl set image deployment.v1.apps/nginx-deployment nginx=nginx:1.16.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b05f891-1170-405b-90e3-2a9205010470",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl edit deployment/nginx-deployment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7783ea8-a5c3-4bf8-9a92-1efd437dcbd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5da840d0-bd3a-4afe-8a34-f8b2de24bc7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ef52ce1-a96c-4dec-a072-d000400e37b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl rollout status deployment/nginx-deployment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bce64280-533e-45ae-b23c-f419cff4e02b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl describe deployments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "699fb735-894e-41b6-b7ec-5cafe0913d8e",
+   "metadata": {},
+   "source": [
+    "### Rolling bacK a Deployment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5780b8a9-8d16-41c7-973a-ae77d9ce6156",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl set image deployment.v1.apps/nginx-deployment nginx=nginx:1.161"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd8195c5-9526-4872-9b9e-fcd87d925437",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl rollout status deployment/nginx-deployment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb320236-2474-4599-aa6a-07e98a9715c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "538b45ff-46f3-421d-beec-3a36b2d4586d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl describe deployments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddf43be8-0b78-4226-85af-15e945ba925f",
+   "metadata": {},
+   "source": [
+    "### Checking Rollout History of a Deployment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7719d195-6f28-42b1-9e3b-09952737b69c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl rollout history deployment/nginx-deployment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79e9d8ae-2db5-44d9-a681-533e6ca877f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl rollout history deployment/nginx-deployment --revision=2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b1b1eaa-b71d-4564-b3c2-8918ffa5d642",
+   "metadata": {},
+   "source": [
+    "### Rolling Back to a Previous Revision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e215bf7-4647-4b87-9290-79f10edfaabd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl rollout undo deployment/nginx-deployment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff650695-9a7b-4961-a134-553521c12187",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06727b9b-655c-46bd-bc9f-99fb78b61c6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Specific revision\n",
+    "!kubectl rollout undo deployment/nginx-deployment --to-revision=3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6192b94c-bc98-4fd1-8a02-311f647f3cc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get deployment nginx-deployment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f332309-c592-4c36-b539-1c76575c9b90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl describe deployment nginx-deployment"
    ]
   }
  ],
