--- a/12-App/Notepad-App/Notepad App.ipynb
+++ b/12-App/Notepad-App/Notepad App.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "markdown",
    "id": "b43899a3-ad39-4a59-8b7d-b4ebf0a5359f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Notepad App (Streamlit and sqlite3)"
    ]
