Add and modify files

--- a/12-App/Counter-App/Counter App.ipynb
+++ b/12-App/Counter-App/Counter App.ipynb
@@ -133,7 +133,7 @@
     "    st.text(f\"{time}\")\n",
     "    \n",
     "# Close Connection\n",
-    "con.close()\n"
+    "con.close()"
    ]
   },
   {
@@ -219,12 +219,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20cda46f-bc6f-4d68-89a3-94d8e7105566",
+   "metadata": {},
+   "source": [
+    "### Add requests"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa28d38c-8791-4bb5-a19a-9a4a47d0651d",
+   "id": "97c9118f-c180-4a84-911e-701950f8a70d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import time\n",
+    "requests = 50\n",
+    "for _ in range(1,requests+1):\n",
+    "    #\n",
+    "    time.sleep(1)"
+   ]
   }
  ],
  "metadata": {
