Add and modify files

--- a/08-Logging-Observability-Monitoring-Alerting/Helm-Kubernetes-Grafana-Prometheus.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Helm-Kubernetes-Grafana-Prometheus.ipynb
@@ -318,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DOCKER_USERNAME=\"mattregojos\""
+    "DOCKER_USERNAME=\"\""
    ]
   },
   {
@@ -387,7 +387,10 @@
   {
    "cell_type": "markdown",
    "id": "353620a6-4d82-48dc-9a43-c6d963a26a07",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### notepadd-deployment.yaml"
    ]
@@ -504,6 +507,104 @@
    "source": [
     "!kubectl get pods -n notepad"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "374832c0-02fd-410c-b5aa-dc6feffb37ea",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d443e2e1-6b67-4bd0-9155-84d6df92165c",
+   "metadata": {},
+   "source": [
+    "## Helm: Kuberbetes, Grafana, Prometheus"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24eddb29-0c1d-485d-96ca-6a85b279d5e2",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Install Helm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c80566e3-461b-4c1a-ab26-2b9c5dd49004",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://get.helm.sh/helm-v3.13.1-linux-amd64.tar.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33e51b79-1954-4c20-bf5c-25e241b3d85a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!tar -zxvf helm-v3.13.1-linux-amd64.tar.gz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d12f87c-0648-41ba-8b62-f2403949ac34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sudo mv linux-amd64/helm /usr/local/bin/helm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5af450b-3ced-4f22-91a9-38168f022e48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sh \n",
+    "# Remove linux-amd64 and helm-v*\n",
+    "rm -rf linux-amd64\n",
+    "rm helm-v*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd1201f7-3996-4647-9135-56bd73770c24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Verify\n",
+    "!helm help"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "464522c3-f811-48e6-b0b5-387d06480f66",
+   "metadata": {},
+   "source": [
+    "### Helm Artifact Hub\n",
+    "\n",
+    "Resource: Artifact Hub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36460f63-916e-4962-997e-2287df634f5f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
