Add and modify files

--- a/08-Logging-Observability-Monitoring-Alerting/Helm-Kubernetes-Grafana-Prometheus.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Helm-Kubernetes-Grafana-Prometheus.ipynb
@@ -11,7 +11,10 @@
   {
    "cell_type": "markdown",
    "id": "c2341eab-408b-4c35-87ba-cae7e19bb0ef",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "## Install Minikube and start Minikube cluster"
    ]
@@ -519,15 +522,18 @@
   {
    "cell_type": "markdown",
    "id": "d443e2e1-6b67-4bd0-9155-84d6df92165c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## Helm: Kuberbetes, Grafana, Prometheus"
+    "## Helm: Kubernetes, Grafana, Prometheus"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "24eddb29-0c1d-485d-96ca-6a85b279d5e2",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -595,7 +601,9 @@
    "source": [
     "### Helm Artifact Hub\n",
     "\n",
-    "Resource: Artifact Hub"
+    "Resource: \n",
+    "- https://helm.sh\n",
+    "- https://"
    ]
   },
   {
