Add and modify files

--- a/08-Logging-Observability-Monitoring-Alerting/Helm-Kubernetes-Grafana-Prometheus.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Helm-Kubernetes-Grafana-Prometheus.ipynb
@@ -603,16 +603,100 @@
     "\n",
     "Resource: \n",
     "- https://helm.sh\n",
-    "- https://"
+    "- https://artifacthub.io"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b053846-eb1b-44ea-aec4-feb82bd3d8b8",
+   "metadata": {},
+   "source": [
+    "#### Kube-Promethus-Stack"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36460f63-916e-4962-997e-2287df634f5f",
+   "id": "c8b73718-cffe-40c1-bc08-d46beac8530f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!helm repo add prometheus-community https://prometheus-community.github.io/helm-charts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84960e2c-6c09-4f58-a735-8b8431e6015c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I add namespace monitoring\n",
+    "!kubectl create namespace monitoring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdd62b5b-d903-4699-a389-cdd5820c9c27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!helm install my-kube-prometheus-stack prometheus-community/kube-prometheus-stack --version 52.1.0 -n monitoring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b90010ca-d2a9-4bdf-a51b-2785be1ea078",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!helm list -n monitoring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73118b5d-ade0-4dfa-bd74-86a67a5204b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl get all -n monitoring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ddfc64d-b198-4e45-84da-4cdf035c2361",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a firewall\n",
+    "!gcloud compute --project=$(gcloud config get project) firewall-rules create ports \\\n",
+    "    --direction=INGRESS --priority=1000 --network=default --action=ALLOW --rules=tcp:8000,tcp:9000,tcp:10000 --source-ranges=0.0.0.0/0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c79da1d1-aae4-438d-8e14-2e3c15ab07a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Port-forward\n",
+    "!kubectl port-forward svc/my-kube-prometheus-stack-grafana  8000:80 -n monitoring --address 0.0.0.0 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01b8feae-9a42-41d4-bbc8-5435961a554d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!kubectl port-forward --help"
+   ]
   }
  ],
  "metadata": {
