Add and modify files

--- a/08-Logging-Observability-Monitoring-Alerting/Helm-Kubernetes-Grafana-Prometheus.ipynb
+++ b/08-Logging-Observability-Monitoring-Alerting/Helm-Kubernetes-Grafana-Prometheus.ipynb
@@ -687,6 +687,17 @@
     "# Port-forward\n",
     "!kubectl port-forward svc/my-kube-prometheus-stack-grafana  8000:80 -n monitoring --address 0.0.0.0 "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dc1b2f8-df00-47ad-aa38-5168c8e9e9e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# User: Admin\n",
+    "# Password: prom-operator"
+   ]
   }
  ],
  "metadata": {
