Add and modify files

--- a/10-Database/Site-App-with-Database.ipynb
+++ b/10-Database/Site-App-with-Database.ipynb
@@ -5,9 +5,10 @@
    "id": "85fc04f0-1db9-4d1e-87c3-57757e9b3d29",
    "metadata": {},
    "source": [
-    "# Notepad App with Database \n",
+    "# Site App with Database \n",
     "\n",
-    "* Create, Read\n",
+    "* About Me Section\n",
+    "* Notepad: Create, Read\n",
     "* Counter"
    ]
   },
