Add and modify files

--- a/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
+++ b/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
@@ -39,6 +39,30 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d703788f-f80f-4595-b224-d1079bb254c7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47a46b30-0089-40fb-8858-a65b218bb58c",
+   "metadata": {},
+   "source": [
+    "## Create a firewall (GCP)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aad2bc56-e1d8-43ce-a15e-598f91318a53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "e42b3cdc-5926-443d-9106-06490a49f54d",
    "metadata": {},
@@ -52,7 +76,21 @@
    "id": "af05a3bc-8291-498a-b40f-007588bcccd9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Install psycopg2-binary\n",
+    "!pip install psycopg2-binary streamlit -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f83c2a69-7a73-449c-a69f-1e78213db98b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import psycopg2\n",
+    "import psycopg2"
+   ]
   }
  ],
  "metadata": {
