--- a/10-Database/Environment-Variables.ipynb
+++ b/10-Database/Environment-Variables.ipynb
@@ -18,6 +18,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "19c434c5-dad0-4c1c-b4f1-e1e595428663",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In a terminal\n",
+    "# export NAME=\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "a66e2d79-33d4-405b-8d00-9b69e3904178",
    "metadata": {},
@@ -28,13 +39,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d84ecd86-ac70-4daa-beb1-0e8b64d1e497",
    "metadata": {},
    "outputs": [],
    "source": [
     "os.getenv(\"NAME\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b0a69dd-6106-41f2-a7a9-5b5bb4b487c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
