Add and modify files

--- a/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
+++ b/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
@@ -28,7 +28,9 @@
    "id": "a36ab808-c220-4969-ac57-c702952f4bfc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!docker run --name postgres-sql -e POSTGRES_USER=matt -e POSTGRES_PASSWORD=password  -d postgres"
+   ]
   },
   {
    "cell_type": "code",
@@ -36,7 +38,15 @@
    "id": "ab86a3c1-6eff-499a-ae06-3e65782bafad",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!docker run -d \\\n",
+    "    --name postgres-sql \\\n",
+    "    -e POSTGRES_USER=matt \\\n",
+    "    -e POSTGRES_PASSWORD=password \\\n",
+    "    -v {pwd}/data:/var/lib/postgresql/data \\\n",
+    "    -p 5000:5432\n",
+    "    postgres"
+   ]
   },
   {
    "cell_type": "code",
@@ -91,6 +101,14 @@
     "# Import psycopg2\n",
     "import psycopg2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2af55e81-123b-4872-86eb-1d706eb3b5f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
