Add and modify files

--- a/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
+++ b/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
@@ -34,16 +34,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ab86a3c1-6eff-499a-ae06-3e65782bafad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17d76262ef50c4f55e71b3f9ae80f71a58963ad69abe694574a126e65c03558c\n"
+     ]
+    }
+   ],
    "source": [
     "!docker run -d \\\n",
     "    --name postgres-sql \\\n",
     "    -e POSTGRES_USER=matt \\\n",
     "    -e POSTGRES_PASSWORD=password \\\n",
-    "    -v {pwd}/data:/var/lib/postgresql/data \\\n",
+    "    -v ${pwd}/data:/var/lib/postgresql/data \\\n",
     "    -p 5000:5432 \\\n",
     "    postgres"
    ]
@@ -54,7 +62,9 @@
    "id": "d703788f-f80f-4595-b224-d1079bb254c7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!docker ps"
+   ]
   },
   {
    "cell_type": "markdown",
