Add and modify files

--- a/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
+++ b/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
@@ -23,6 +23,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2ca4020b-5095-4297-9375-18b415d46926",
+   "metadata": {},
+   "source": [
+    "### Postgres Docker"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a36ab808-c220-4969-ac57-c702952f4bfc",
@@ -34,18 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ab86a3c1-6eff-499a-ae06-3e65782bafad",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17d76262ef50c4f55e71b3f9ae80f71a58963ad69abe694574a126e65c03558c\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!docker run -d \\\n",
     "    --name postgres-sql \\\n",
@@ -64,6 +64,14 @@
    "outputs": [],
    "source": [
     "!docker ps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78f1c839-960c-405b-8d05-ad203a75ec9d",
+   "metadata": {},
+   "source": [
+    "### pgAdmin"
    ]
   },
   {
