--- a/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
+++ b/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
@@ -75,6 +75,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df7fb742-d199-4821-9ef1-ff4339634551",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker run -p 8000:80 \\\n",
+    "    -e 'PGADMIN_DEFAULT_EMAIL=matt@example.com' \\\n",
+    "    -e 'PGADMIN_DEFAULT_PASSWORD=password' \\\n",
+    "    -d dpage/pgadmin4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1db1cd4-c5f4-4699-a361-4058cb4e93fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker ps"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "47a46b30-0089-40fb-8858-a65b218bb58c",
    "metadata": {},
@@ -88,7 +111,10 @@
    "id": "aad2bc56-e1d8-43ce-a15e-598f91318a53",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!gcloud compute --project=$(gcloud config get project) firewall-rules create ports \\\n",
+    "    --direction=INGRESS --priority=1000 --network=default --action=ALLOW --rules=tcp:5000,tcp:8000,tcp:5401,tcp:9000 --source-ranges=0.0.0.0/0"
+   ]
   },
   {
    "cell_type": "markdown",
