Add and modify files

--- a/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
+++ b/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
@@ -118,6 +118,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c4b8da50-30dc-4d84-b13b-ed1ab3927892",
+   "metadata": {},
+   "source": [
+    "### Open pgAdmin Browser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a4b96c7-0e21-4414-9c80-c1cdbc8658dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# http://<IP_ADDRESS>:<PORT>\n",
+    "# Login with credentials\n",
+    "\n",
+    "# Register Server\n",
+    "# HOST: <IP_ADDRESS>\n",
+    "# PORT: 5000\n",
+    "# USER: <POSTGRES_USER>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e42b3cdc-5926-443d-9106-06490a49f54d",
    "metadata": {},
    "source": [
