Add and modify files

--- a/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
+++ b/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
@@ -102,7 +102,7 @@
    "id": "47a46b30-0089-40fb-8858-a65b218bb58c",
    "metadata": {},
    "source": [
-    "## Create a firewall (GCP)"
+    "### Create a firewall (GCP)"
    ]
   },
   {
@@ -155,8 +155,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install psycopg2-binary\n",
+    "# Install psycopg2-binary and streamlit\n",
     "!pip install psycopg2-binary streamlit -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38f82d1f-dc99-4fda-b094-bbfc65584fac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Restart"
    ]
   },
   {
