--- a/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
+++ b/10-Database/PostgreSQL-pgAdmin-psycopg.ipynb
@@ -137,7 +137,8 @@
     "# Register Server\n",
     "# HOST: <IP_ADDRESS>\n",
     "# PORT: 5000\n",
-    "# USER: <POSTGRES_USER>"
+    "# USER: <POSTGRES_USER>\n",
+    "# PASSWORD: <PASSWORD>"
    ]
   },
   {
@@ -145,7 +146,9 @@
    "id": "e42b3cdc-5926-443d-9106-06490a49f54d",
    "metadata": {},
    "source": [
-    "## Connect PostgreSQL using psycopg"
+    "## Connect PostgreSQL using psycopg\n",
+    "\n",
+    "Resource: https://psycopg.org/docs/usage.html"
    ]
   },
   {
@@ -171,22 +174,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f83c2a69-7a73-449c-a69f-1e78213db98b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import psycopg2\n",
-    "import psycopg2"
+    "import psycopg2, streamlit as st"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2af55e81-123b-4872-86eb-1d706eb3b5f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Connect to an existing database\n",
+    "conn = psycopg2.connect(\"\"\"\n",
+    "                        dbname=matt\n",
+    "                        user=matt\n",
+    "                        host=34.42.241.44\n",
+    "                        port=5000\n",
+    "                        password=password\n",
+    "                        \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f8dc5f58-120d-483f-854a-606ed611a5cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Open a cursor to perform database operations\n",
+    "cur = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "73ee3605-84ec-4203-8df1-1ba1707cf1c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Execute a command\n",
+    "cur.execute(\"\"\"\n",
+    "            CREATE TABLE test (id serial PRIMARY KEY, num integer, data varchar);\n",
+    "            \"\"\")\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b7a33f38-2dad-4509-848c-1e26a284cc80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.execute(\"\"\"\n",
+    "            INSERT INTO test (num, data) VALUES (%s, %s)\n",
+    "            \"\"\", (100, \"b\"))\n",
+    "conn.commit()      "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2af55e81-123b-4872-86eb-1d706eb3b5f8",
+   "id": "c1f902a3-a81f-4fd2-9e18-cfb349d77c5d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cur.execute(\"\"\"\n",
+    "            SELECT *\n",
+    "            FROM test\n",
+    "            \"\"\")\n",
+    "cur.fetchall() # cur.fecthone()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d69ae786-4e36-4a36-89b5-b46022a30616",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### REMEMBER: DO NOT DO THIS \n",
+    "# SQL = \"INSERT INTO test (num, data) VALUES ('%s', '%s');\" # Adding quotes\n",
+    "# data = (200, \"c\")\n",
+    "# cur.execute(SQL % data) # using %"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ebe586ad-a26d-40f3-81bc-66ea96e99810",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is the coorect way.\n",
+    "SQL = \"INSERT INTO test (num, data) VALUES (%s, %s);\"\n",
+    "data = (200, \"c\")\n",
+    "cur.execute(SQL, data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7ff2fb88-31e6-407b-9631-d8333bf9d59f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 100, 'a'), (2, 100, 'b'), (3, 200, 'c')]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cur.execute(\"\"\"\n",
+    "            SELECT *\n",
+    "            FROM test\n",
+    "            \"\"\")\n",
+    "cur.fetchall() # cur.fecthone()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "799bacac-36d1-4e6a-af57-70c22a86ed00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Close communication with database\n",
+    "cur.close()\n",
+    "conn.close()"
+   ]
   }
  ],
  "metadata": {
